--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.2.6",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^5.2.6"
   }
 }
